<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_24sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sfs_face_re_dlog_rounded_slight"
        android:orientation="vertical"
        android:padding="@dimen/_24sdp">

        <!-- Main Icon -->
        <ImageView
            android:id="@+id/ivDialogIcon"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/sfs_ic_re_logo"
            app:tint="@color/sfs_re_primary_brand" />

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/sfs_re_manrope_bold"
            android:gravity="center"
            android:text="@string/sfs_re_leaving_so_soon_text"
            android:textColor="#1A1A2E"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/tvDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/sfs_re_manrope_medium"
            android:gravity="center"
            android:text="@string/sfs_re_are_you_sure_you_sure_text"
            android:textColor="@color/sfs_re_secondary_text"
            android:textSize="@dimen/_12sdp"
            android:lineSpacingExtra="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btnExitNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sfs_re_button_face_primary_bg"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sfs_re_manrope_semibold"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/sfs_re_stay_in_re_text"
                android:textColor="@color/sfs_white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/btnExitYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/sfs_re_button_secondary_bg"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sfs_re_manrope_semibold"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/sfs_re_exit_re_text"
                android:textColor="@color/sfs_re_secondary_text"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Close button (top-right) identical to coins required dialog -->
    <ImageView
        android:id="@+id/btnExitClose"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/sfs_face_re_close_button_white"
        android:contentDescription="@string/sfs_face_dlog_close_text"
        android:padding="@dimen/_7sdp"
        android:scaleType="centerInside"
        android:src="@drawable/sfs_re_trans_close_choose" />

</FrameLayout>
