<?xml version="1.0" encoding="utf-8"?>
<!-- Dialog: Server Busy
     IDs: ivBusyIcon, tvBusyTitle, tvBusyMessage, btnRetry, btnGoBack -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/sfs_face_re_dlog_rounded_slight"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/_24sdp"
        android:paddingTop="@dimen/_30sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:paddingBottom="@dimen/_22sdp">

        <!-- Icon with glow -->
        <FrameLayout
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sfs_re_logo_glow_update" />

            <ImageView
                android:id="@+id/ivBusyIcon"
                android:layout_width="@dimen/_52sdp"
                android:layout_height="@dimen/_52sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/sfs_re_dlog_icon_text"
                android:scaleType="fitCenter"
                android:src="@drawable/sfs_re_trans_close_choose" />
        </FrameLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/tvBusyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/sfs_re_poppins_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/sfs_re_server_high_demand_text"
            android:textColor="#1A1A2E"
            android:textSize="@dimen/_18sdp" />

        <!-- Gradient accent bar -->
        <View
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/sfs_face_re_bfge_orange_gradient_bg" />

        <!-- Message -->
        <TextView
            android:id="@+id/tvBusyMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:fontFamily="@font/sfs_re_poppins_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/sfs_face_re_server_high_demand_desc_text"
            android:textColor="@color/sfs_re_secondary_text"
            android:textSize="@dimen/_12sdp" />

        <!-- Try Again button -->
        <TextView
            android:id="@+id/btnRetry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/sfs_face_re_dlog_button_gradient_horizontal"
            android:fontFamily="@font/sfs_re_poppins_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/sfs_face_re_server_busy_retry_button_text"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_14sdp" />

        <!-- Go Back (secondary) -->
        <TextView
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/sfs_re_poppins_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/sfs_face_re_data_busy_back_button_text"
            android:textColor="@color/sfs_re_tertiary_text"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>
</FrameLayout>
